增加openai文件上传内容